--- a/pgs_secundarias.html/Arraial.html
+++ b/pgs_secundarias.html/Arraial.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ilhas Cagarras</title>
+    <title>Arraial-do-Cabo</title>
     <link rel="stylesheet" href="../css/Arraial.css">
     <script src="../js/animais_arraial.js" defer></script>
     
@@ -13,7 +13,7 @@
     <h1>.</h1>
     <nav class="otherPg">
         <ul class="links">
-            <a class="a1" href="#" >Usuário</a>
+            
             <a class="a2" href="#pt9" >Locais de Monitoramento</a>
             <a class="a3" href="form.html" >Formulário de Contato</a>
             <a class="a4" href="integrantes.html" >Integrantes</a>
@@ -79,7 +79,7 @@
         <p class="txt5">Devido à especulação imobiliária e a consequente redução dos habitats naturais,A poluição sonora e a pesca acidental são algumas das principais causas de diversas espécies correrem risco de extinção em Arraial do Cabo como é o caso do <span style="color:#00BCCD">Formigueiro do Litoral</span>.
         </p>
         <figure id="animals2">
-            <img  src="../animais2/imagem11.png" width="500" height="350" alt="">
+            <img class="ani2"  src="../animais2/imagem11.png" width="500" height="350" alt="">
             <img class="bal" src="../imagens_fundo/baleia.png" width="916px" height="427px" alt="">
         </figure>
     </section>
