--- a/pgs_secundarias.html/FernandoNoronha.html
+++ b/pgs_secundarias.html/FernandoNoronha.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ilhas Cagarras</title>
+    <title>Fernando de Noronha</title>
     <link rel="stylesheet" href="../css/FernandoNoronha.css">
     <script src="../js/animais_fn.js" defer></script>
     
@@ -15,7 +15,7 @@
     <main class="logo">
         <nav class="otherPg">
             <ul class="links">
-                <a class="a1" href="#" >Usuário</a>
+                
                 <a class="a2" href="#pt9" >Locais de Monitoramento</a>
                 <a class="a3" href="form.html" >Formulário de Contato</a>
                 <a class="a4" href="integrantes.html" >Integrantes</a>
@@ -65,7 +65,7 @@
         </ul>
         <p class="txt42">No arquipélogo já foram registradas mais de 169 espécies de peixes recifais, 218 espécies de moluscos, 11 espécies de corais, 33 espécies de cnidários e 77 espécies de esponja.</p>
         <figure id="animals">
-            <img  src="../animais4/imagem1.png" width="500" height="350" alt="">
+            <img class="ani"  src="../animais4/imagem1.png" width="500" height="350" alt="">
             <img class="cm" src="../imagens_fundo/cm.png" width="623px" height="741px" alt="">
         </figure>
         <p class="clique">Clique no nomes dos animais para aparecer a foto de cada espécie</p>
@@ -77,7 +77,7 @@
         <p class="txt5">A espécie que sofre maior risco de extinção em Fernando de Noronha é a <span style="color:#00BCCD">Tartaruga-Verde</span>,ela se reproduz quase que exclusivamente na ilha e está criticamente ameaçada de extinção.A captura incidental na pesca, a poluição marinha e as mudanças climáticas podem afetar esses animais ao longo de todo seu ciclo de vida..
         </p>
         <figure id="animals2">
-            <img  src="../animais4/imagem8.png" width="500" height="350" alt="">
+            <img  style="z-index: 1;" src="../animais4/imagem8.png" width="500" height="350" alt="">
             <img class="bal" src="../imagens_fundo/baleia.png" width="916px" height="427px" alt="">
         </figure>
     </section>
