--- a/pgs_secundarias.html/integrantes.html
+++ b/pgs_secundarias.html/integrantes.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nautilus Monitoring</title>
+    <title>Integrantes</title>
     <link rel="stylesheet" href="../css/integrantes.css">
 </head>
 <body>
@@ -12,7 +12,7 @@
     <main class="logo">
         <nav class="otherPg">
             <ul class="links">
-                <a class="a1" href="#" >Usuário</a>
+                
                 <a class="a2" href="../pagina_principal.html#pt3" >Locais de Monitoramento</a>
                 <a class="a3" href="#" >Formulário de Contato</a>
                 <a class="a4" href="integrantes.html" >Integrantes</a>
@@ -23,7 +23,7 @@
         <h1 class="m">Contato</h1>
         <section  class="lm"> 
             <section class="box1">
-                <img class="img" src="../imagens_fundo/cagarras.jpg" width="148px" height="146px" alt="">
+                <img class="img1" src="../integrantes_img/gabriel.jpg" width="148px" height="146px" alt="">
                 <h2 class="nome">Gabriel Dias Menezes</h2>
                 <p class="info">RM:555019 <br>
                     Email: rm555019@fiap.com.br<br>
@@ -32,7 +32,7 @@
                 </p>
         </section>
         <section class="box3">
-            <img class="img" src="../imagens_fundo/Arraial-do-Cabo.jpeg" width="148px" height="146px" alt="">
+            <img class="img2" src="../integrantes_img/henrique.jpg" width="148px" height="146px" alt="">
             <h2 class="nome">Henrique Francisco Garcia</h2>
                 <p class="info2">RM:558062 <br>
                     Email: rm558062@fiap.com.br
@@ -41,7 +41,7 @@
                 </p>  
         </section>
         <section class="box4">
-            <img class="img" src="../imagens_fundo/Abrolhos-Bahia.jpg" width="148px" height="146px" alt="">
+            <img class="img3" src="../integrantes_img/joao.png" width="148px" height="146px" alt="">
             <h2 class="nome">João Victor Michaeli de Bem</h2>
             <p class="info2">RM:555678 <br>
                 Email: rm555678@fiap.com.br
