--- a/pgs_secundarias.html/integrantes.html
+++ b/pgs_secundarias.html/integrantes.html
@@ -27,8 +27,8 @@
                 <h2 class="nome">Gabriel Dias Menezes</h2>
                 <p class="info">RM:555019 <br>
                     Email: rm555019@fiap.com.br<br>
-                     <a id="a11" class="link1" href="www.linkedin.com/in/gabriel-dias-5851382b5">Linkedin</a><br>
-                     <a id="a21" class="link1" href="https://github.com/gabrieldiasmenezes">GitHub</a><br>
+                     <a id="a11" class="link1" href="www.linkedin.com/in/gabriel-dias-5851382b5" target="_blank">Linkedin</a><br>
+                     <a id="a21" class="link1" href="https://github.com/gabrieldiasmenezes" target="_blank">GitHub</a><br>
                 </p>
         </section>
         <section class="box3">
@@ -36,8 +36,8 @@
             <h2 class="nome">Henrique Francisco Garcia</h2>
                 <p class="info2">RM:558062 <br>
                     Email: rm558062@fiap.com.br
-                    <a id="a1" class="link" href="#">Linkedin</a><br>
-                    <a id="a2" class="link" href="#">GitHub</a><br>
+                    <a id="a1" class="link" href="#" target="_blank">Linkedin</a><br>
+                    <a id="a2" class="link" href="#" target="_blank">GitHub</a><br>
                 </p>  
         </section>
         <section class="box4">
@@ -45,12 +45,12 @@
             <h2 class="nome">João Victor Michaeli de Bem</h2>
             <p class="info2">RM:555678 <br>
                 Email: rm555678@fiap.com.br
-                <a id="a1" class="link" href="#">Linkedin</a><br>
-                <a id="a2" class="link" href="#">GitHub</a><br>
+                <a id="a1" class="link" href="#" target="_blank">Linkedin</a><br>
+                <a id="a2" class="link" href="#" target="_blank">GitHub</a><br>
                 </p>
         </section>
         <button  id="idMandar"  type="submit" class="github">
-            <a class="gh" href="#">Link do projeto no github</a>
+            <a class="gh" href="https://github.com/gabrieldiasmenezes/Nautilus-Monitoring" target="_blank">Link do projeto no github</a>
         </button>
 
     </section>
