--- a/pgs_secundarias.html/integrantes.html
+++ b/pgs_secundarias.html/integrantes.html
@@ -35,7 +35,7 @@
             <img class="img2" src="../integrantes_img/henrique.jpg" width="148px" height="146px" alt="">
             <h2 class="nome">Henrique Francisco Garcia</h2>
                 <p class="info2">RM:558062 <br>
-                    Email: rm558062@fiap.com.br
+                    Email: rm558062@fiap.com.br<br>
                     <a id="a1" class="link" href="https://www.linkedin.com/in/henrique-fgarcia/" target="_blank">Linkedin</a><br>
                     <a id="a2" class="link" href="https://github.com/HenriqueDML" target="_blank">GitHub</a><br>
                 </p>  
@@ -44,7 +44,7 @@
             <img class="img3" src="../integrantes_img/joao.png" width="148px" height="146px" alt="">
             <h2 class="nome">João Victor Michaeli de Bem</h2>
             <p class="info2">RM:555678 <br>
-                Email: rm555678@fiap.com.br
+                Email: rm555678@fiap.com.br<br>
                 <a id="a1" class="link" href="https://www.linkedin.com/in/joaomichaeli/" target="_blank">Linkedin</a><br>
                 <a id="a2" class="link" href="https://github.com/JoaoMichaeli" target="_blank">GitHub</a><br>
                 </p>
