--- a/pagina_principal.html
+++ b/pagina_principal.html
@@ -32,8 +32,8 @@
         <p class="txt2">As Ilhas Cagarras são um refúgio que abriga espécies endêmicas e ameaçadas tendo uma vasta biodiversidade na região.Além de refúgio as ilhas são um sítio arqueológico,  corredor migratório de baleias-jubartes, uma área de interação de mais cinco espécies de cetáceos e um importante ninhal de aves marinhas. 
         </p>
         <figure >
-            <img class="ag1" src="imagens_fundo/agua-viva.png" width="333.5px" height="334px" alt="">
-            <img class="ag2" src="imagens_fundo/agua-viva2.png" width="333.5px" height="334px" alt="">
+            <img class="ag1" src="imagens_fundo/agua-viva.png" width="333.5px" height="334px" alt="imagem de fundo">
+            <img class="ag2" src="imagens_fundo/agua-viva2.png" width="333.5px" height="334px" alt="imagem de fundo">
         </figure>
     </section>
         <section id="pt3"></section>
@@ -41,25 +41,25 @@
             <h1 class="tit3">Locais de Monitoramento</h1>   
             
             <section class="box1">
-                <img class="cag" src="imagens_fundo/cagarras.jpg" width="148px" height="146px" alt="">
+                <img class="cag" src="imagens_fundo/cagarras.jpg" width="148px" height="146px" alt="imagem da ilha cagarras">
                 <h2 class="IC">Ilhas Cagarras</h2>
             <p class="txtIC">Localizada no Rio de Janeiro,essse conjunto de três ilhas e duas ilhotas é um refugio de biodiversidade que abriga espécies endêmicas e ameaçadas...</p>
             <a href="pgs_secundarias.html/Cagarras.html"><button class="btn1"><p class="sb">Saiba mais</p></button></a>  
         </section>
         <section class="box2">
-            <img class="ac" src="imagens_fundo/Arraial-do-Cabo.jpeg" width="148px" height="146px" alt="">
+            <img class="ac" src="imagens_fundo/Arraial-do-Cabo.jpeg" width="148px" height="146px" alt="imagem de cabo frio">
             <h2 class="AC">Arraial do Cabo</h2>
             <p class="txtAC">Arraial do Cabo é conhecida pela rica biodiversidade marinha, com recifes de corais e diversas espécies de peixes e outros organismos marinhos...</p>
             <a href="pgs_secundarias.html/Arraial.html"><button class="btn2"><p class="sb">Saiba mais</p></button></a>  
         </section>
         <section class="box3">
-            <img class="a" src="imagens_fundo/Abrolhos-Bahia.jpg" width="148px" height="146px" alt="">
+            <img class="a" src="imagens_fundo/Abrolhos-Bahia.jpg" width="148px" height="146px" alt="imagem de abrolhos">
             <h2 class="A">Abrolhos</h2>
             <p class="txtA">O arquipélago de Abrolhos ,localizado na Bahia, é um importante local de reprodução para várias espécies de aves marinhas e tartarugas marinhas...</p>
             <a href="pgs_secundarias.html/Abrolhos.html"><button class="btn3"><p class="sb">Saiba mais</p></button></a>  
         </section>
         <section class="box4">
-            <img class="fn" src="imagens_fundo/fn.png" width="148px" height="146px" alt="">
+            <img class="fn" src="imagens_fundo/fn.png" width="148px" height="146px" alt="imagem de fernando de noronha">
             <h2 class="FN">Fernando de Noronha</h2>
             <p class="txtFN">Localizado em Pernambuco,Fernando de Noronha é um arquipélogo formado por 21 ilhas que abriga exuberantes belezas naturais além de uma grande biodiversidade....</p>
             <a href="pgs_secundarias.html/FernandoNoronha.html"><button class="btn4"><p class="sb">Saiba mais</p></button></a>  
