alts nas imagens

--- a/pgs_secundarias.html/integrantes.html
+++ b/pgs_secundarias.html/integrantes.html
@@ -23,7 +23,7 @@
         <h1 class="m">Contato</h1>
         <section  class="lm"> 
             <section class="box1">
-                <img class="img1" src="../integrantes_img/gabriel.jpg" width="148px" height="146px" alt="">
+                <img class="img1" src="../integrantes_img/gabriel.jpg" width="148px" height="146px" alt="Foto de perfil gabriel">
                 <h2 class="nome">Gabriel Dias Menezes</h2>
                 <p class="info">RM:555019 <br>
                     Email: rm555019@fiap.com.br<br>
@@ -32,7 +32,7 @@
                 </p>
         </section>
         <section class="box3">
-            <img class="img2" src="../integrantes_img/henrique.jpg" width="148px" height="146px" alt="">
+            <img class="img2" src="../integrantes_img/henrique.jpg" width="148px" height="146px" alt="Foto de perfil henrique">
             <h2 class="nome">Henrique Francisco Garcia</h2>
                 <p class="info2">RM:558062 <br>
                     Email: rm558062@fiap.com.br<br>
@@ -41,7 +41,7 @@
                 </p>  
         </section>
         <section class="box4">
-            <img class="img3" src="../integrantes_img/joao.png" width="148px" height="146px" alt="">
+            <img class="img3" src="../integrantes_img/joao.png" width="148px" height="146px" alt="Foto de perfil joão">
             <h2 class="nome">João Victor Michaeli de Bem</h2>
             <p class="info2">RM:555678 <br>
                 Email: rm555678@fiap.com.br<br>
