--- a/pgs_secundarias.html/Cagarras.html
+++ b/pgs_secundarias.html/Cagarras.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="../css/cagarras.css">
     <script src="../js/animais_cagarras.js" defer></script>
     <script src="../js/fts_cagarras.js" defer></script>
-    
 </head>
 <body>
         <h1>.</h1>
@@ -25,7 +24,7 @@
         <h1 class="n">Ilhas</h1>
         <h1 class="m">Cagarras</h1>
         <figure id="imgs" class="imgs">
-            <img id="ic1" class="ic1" src="../imagens/ic1.png" width='500px' height='325px' alt="">
+            <img id="ic1" class="ic1" src="../imagens/ic1.png" width='500px' height='325px' alt="ilhas cagarras">
         </figure>
     </main>
     <section id="pt2"></section>
@@ -34,8 +33,8 @@
         <p class="txt2">
             As Ilhas Cagarras são um refúgio  que abriga espécies endêmicas e ameaçadas tendo uma vasta biodiversidade na região.Além de refúgio as ilhas são um sítio arqueológico,  corredor migratório de baleias-jubartes, uma área de interação de mais cinco espécies de cetáceos e um importante ninhal de aves marinhas.         </p>
         <figure >
-            <img class="ag1" src="../imagens_fundo/agua-viva.png" width="333.5px" height="334px" alt="">
-            <img class="ag2" src="../imagens_fundo/agua-viva2.png" width="333.5px" height="334px" alt="">
+            <img class="ag1" src="../imagens_fundo/agua-viva.png" width="333.5px" height="334px" alt="imagem de fundo">
+            <img class="ag2" src="../imagens_fundo/agua-viva2.png" width="333.5px" height="334px" alt="imagem de fundo">
         </figure>
     </section>
     <section  class="pt3">
@@ -44,8 +43,8 @@
         </p>
         <iframe class="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3671.9255309987284!2d-43.195259875363625!3d-23.02650634215935!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9bd4a8b52a5335%3A0x6092c5e3e89a3ddb!2sIlha%20Cagarra!5e0!3m2!1spt-BR!2sbr!4v1717291807107!5m2!1spt-BR!2sbr" width="500px" height="350px" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <figure >
-            <img class="px1" src="../imagens_fundo/peixe1-2.png" width="490px" height="369.5px" alt="">
-            <img class="px2" src="../imagens_fundo/peixe1-2.png" width="490px" height="380px" alt="">
+            <img class="px1" src="../imagens_fundo/peixe1-2.png" width="490px" height="369.5px" alt="imagem de fundo">
+            <img class="px2" src="../imagens_fundo/peixe1-2.png" width="490px" height="380px" alt="imagem de fundo">
         </figure>
     </section>
     <section  class="pt4">
@@ -69,8 +68,8 @@
             </ul>
         </span>
         <figure id="animals">
-            <img class="ani"  src="../animais1/imagem1.png" width="500px" height="350px" alt="">
-            <img class="cm" src="../imagens_fundo/cm.png" width="623px" height="741px" alt="">
+            <img class="ani"  src="../animais1/imagem1.png" width="500px" height="350px" alt="imagem de fundo">
+            <img class="cm" src="../imagens_fundo/cm.png" width="623px" height="741px" alt="imagem de fundo">
         </figure>
         <p class="clique">Clique no nomes dos animais para aparecer a foto de cada espécie</p>
     </section>
@@ -81,10 +80,10 @@
         <p class="txt5">A espécie com maior risco de extinção nas Ilhas Cagarras é o <span style="color:#00BCCD;">cágado de calda</span> devido a alta poluição caça ilegal e a perda do seu habitat.
         </p>
         <figure id="animals2"><span style="z-index: 1;">
-            <img class="ani2"  src="../animais1/imagem11.png" width="500px" height="350px" alt="">
+            <img class="ani2"  src="../animais1/imagem11.png" width="500px" height="350px" alt="Cágado em extinção">
 
         </span>
-            <img class="bal" src="../imagens_fundo/baleia.png" width="916px" height="427px" alt="">
+            <img class="bal" src="../imagens_fundo/baleia.png" width="916px" height="427px" alt="imagem de fundo">
         </figure>
     </section>
     <section  class="pt6">
@@ -107,9 +106,9 @@
         </article>
         <figure id="animals3">
             <span style="z-index: 1;">
-                <img class="ani3" src="../animais1/imagem12.png" width="500" height="350" alt="">
+                <img class="ani3" src="../animais1/imagem12.png" width="500" height="350" alt="Cágado em extinção">
             </span>
-            <img class="orc" src="../imagens_fundo/orca.png" width="816px" height="427px" alt="">
+            <img class="orc" src="../imagens_fundo/orca.png" width="816px" height="427px" alt="imagem de fundo">
         </figure>
     </section>
     <section  class="pt7">
@@ -120,10 +119,10 @@
         </p>
         <figure id="animals4">
             <span style="z-index: 1;">
-                <img  src="../imagens/tur.png" width="500" height="350" alt="">
+                <img  src="../imagens/tur.png" width="500" height="350" alt="Foto turismo">
 
             </span>
-            <img class="car" src="../imagens_fundo/car.png" width="916px" height="827px" alt="">
+            <img class="car" src="../imagens_fundo/car.png" width="916px" height="827px" alt="imagem de fundo">
         </figure>
     </section>
     <section  class="pt8">
@@ -132,28 +131,28 @@
         </p>
         <figure id="animals5"><span style="z-index: 1;">
 
-            <img src="../imagens/lixo.png" width="500" height="350" alt="">
+            <img src="../imagens/lixo.png" width="500" height="350" alt="Foto do lixo">
         </span>
-            <img class="car" src="../imagens_fundo/car.png" width="916px" height="827px" alt="">  
+            <img class="car" src="../imagens_fundo/car.png" width="916px" height="827px" alt="imagem de fundo">  
         </figure>
     </section>
     <section id="pt9"></section>
     <section  class="lm">
         <h1 class="LM">Outros Locais de Monitoramento</h1>   
     <section class="box2">
-        <img class="ac" src="../imagens_fundo/Arraial-do-Cabo.jpeg" width="148px" height="146px" alt="">
+        <img class="ac" src="../imagens_fundo/Arraial-do-Cabo.jpeg" width="148px" height="146px" alt="Foto de Arraial">
         <h2 class="AC">Arraial do Cabo</h2>
         <p class="txtAC">Arraial do Cabo é conhecida pela rica biodiversidade marinha, com recifes de corais e diversas espécies de peixes e outros organismos marinhos...</p>
         <a href="Arraial.html"><button class="btn2"><p class="sb">Saiba mais</p></button></a>  
     </section>
     <section class="box3">
-        <img class="a" src="../imagens_fundo/Abrolhos-Bahia.jpg" width="148px" height="146px" alt="">
+        <img class="a" src="../imagens_fundo/Abrolhos-Bahia.jpg" width="148px" height="146px" alt="Foto de abrolhos">
         <h2 class="A">Abrolhos</h2>
         <p class="txtA">O arquipélago de Abrolhos ,localizado na Bahia, é um importante local de reprodução para várias espécies de aves marinhas e tartarugas marinhas...</p>
         <a href="Abrolhos.html"><button class="btn3"><p class="sb">Saiba mais</p></button></a>  
     </section>
     <section class="box4">
-        <img class="fn" src="../imagens_fundo/fn.png" width="148px" height="146px" alt="">
+        <img class="fn" src="../imagens_fundo/fn.png" width="148px" height="146px" alt="Foto Fernando de Noronha">
         <h2 class="FN">Fernando de Noronha</h2>
         <p class="txtFN">Localizado em Pernambuco,Fernando de Noronha é um arquipélogo formado por 21 ilhas que abriga exuberantes belezas naturais além de uma grande biodiversidade....</p>
         <a href="FernandoNoronha.html"><button class="btn4"><p class="sb">Saiba mais</p></button></a>  
