--- a/pagina_principal.html
+++ b/pagina_principal.html
@@ -29,9 +29,7 @@
     <section id="pt2"></section>
     <section  class="pt2">
         <h1 class="tit2">Nautilus Monotoring</h1>
-        <p class="txt2">
-            O Nautilus Monitoring tem como objetivo fazer o monitoramento dos atuais habitats presente da costa brasileira, através de análises de dados recolhidos dos habitats contendo o mapeamento das regiões aqui informadas e  informações sobre o local como espécies presentes no local,consequiencia do lixo para o ecossistema,apresentando as espécies com maior risco de extinção e muito mais.Esse site é destinado a trazer essas innformações a fim de facilitar o monitoramento e os cuidados com a região costeira e os habitats marinhos.
-           
+        <p class="txt2">As Ilhas Cagarras são um refúgio  que abriga espécies endêmicas e ameaçadas tendo uma vasta biodiversidade na região.Além de refúgio as ilhas são um sítio arqueológico,  corredor migratório de baleias-jubartes, uma área de interação de mais cinco espécies de cetáceos e um importante ninhal de aves marinhas. 
         </p>
         <figure >
             <img class="ag1" src="imagens_fundo/agua-viva.png" width="333.5px" height="334px" alt="">
