--- a/pgs_secundarias.html/Cagarras.html
+++ b/pgs_secundarias.html/Cagarras.html
@@ -7,12 +7,13 @@
     <link rel="stylesheet" href="../css/cagarras.css">
     <script src="../js/animais_cagarras.js" defer></script>
     <script src="../js/fts_cagarras.js" defer></script>
+    
 </head>
 <body>
         <h1>.</h1>
     <section class="itens"></section>
     <main class="logo">
-        <nav class="otherPg">
+        <nav style="z-index: 1;" class="otherPg">
             <ul class="links">
                 
                 <a class="a2" href="#pt9" >Locais de Monitoramento</a>
@@ -24,7 +25,7 @@
         <h1 class="n">Ilhas</h1>
         <h1 class="m">Cagarras</h1>
         <figure id="imgs" class="imgs">
-            <img id="ic1" class="ic1" src="../imagens/ic1.png" width='500px' height='325px' alt="ilhas cagarras">
+            <img id="ic1" class="ic1" src="../imagens/ic1.png" width='500px' height='325px' alt="">
         </figure>
     </main>
     <section id="pt2"></section>
@@ -33,8 +34,8 @@
         <p class="txt2">
             As Ilhas Cagarras são um refúgio  que abriga espécies endêmicas e ameaçadas tendo uma vasta biodiversidade na região.Além de refúgio as ilhas são um sítio arqueológico,  corredor migratório de baleias-jubartes, uma área de interação de mais cinco espécies de cetáceos e um importante ninhal de aves marinhas.         </p>
         <figure >
-            <img class="ag1" src="../imagens_fundo/agua-viva.png" width="333.5px" height="334px" alt="imagem de fundo">
-            <img class="ag2" src="../imagens_fundo/agua-viva2.png" width="333.5px" height="334px" alt="imagem de fundo">
+            <img class="ag1" src="../imagens_fundo/agua-viva.png" width="333.5px" height="334px" alt="">
+            <img class="ag2" src="../imagens_fundo/agua-viva2.png" width="333.5px" height="334px" alt="">
         </figure>
     </section>
     <section  class="pt3">
@@ -43,8 +44,8 @@
         </p>
         <iframe class="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3671.9255309987284!2d-43.195259875363625!3d-23.02650634215935!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9bd4a8b52a5335%3A0x6092c5e3e89a3ddb!2sIlha%20Cagarra!5e0!3m2!1spt-BR!2sbr!4v1717291807107!5m2!1spt-BR!2sbr" width="500px" height="350px" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <figure >
-            <img class="px1" src="../imagens_fundo/peixe1-2.png" width="490px" height="369.5px" alt="imagem de fundo">
-            <img class="px2" src="../imagens_fundo/peixe1-2.png" width="490px" height="380px" alt="imagem de fundo">
+            <img class="px1" src="../imagens_fundo/peixe1-2.png" width="490px" height="369.5px" alt="">
+            <img class="px2" src="../imagens_fundo/peixe1-2.png" width="490px" height="380px" alt="">
         </figure>
     </section>
     <section  class="pt4">
@@ -68,8 +69,8 @@
             </ul>
         </span>
         <figure id="animals">
-            <img class="ani"  src="../animais1/imagem1.png" width="500px" height="350px" alt="imagem de fundo">
-            <img class="cm" src="../imagens_fundo/cm.png" width="623px" height="741px" alt="imagem de fundo">
+            <img class="ani"  src="../animais1/imagem1.png" width="500px" height="350px" alt="">
+            <img class="cm" src="../imagens_fundo/cm.png" width="623px" height="741px" alt="">
         </figure>
         <p class="clique">Clique no nomes dos animais para aparecer a foto de cada espécie</p>
     </section>
@@ -80,10 +81,10 @@
         <p class="txt5">A espécie com maior risco de extinção nas Ilhas Cagarras é o <span style="color:#00BCCD;">cágado de calda</span> devido a alta poluição caça ilegal e a perda do seu habitat.
         </p>
         <figure id="animals2"><span style="z-index: 1;">
-            <img class="ani2"  src="../animais1/imagem11.png" width="500px" height="350px" alt="Cágado em extinção">
+            <img class="ani2"  src="../animais1/imagem11.png" width="500px" height="350px" alt="">
 
         </span>
-            <img class="bal" src="../imagens_fundo/baleia.png" width="916px" height="427px" alt="imagem de fundo">
+            <img class="bal" src="../imagens_fundo/baleia.png" width="916px" height="427px" alt="">
         </figure>
     </section>
     <section  class="pt6">
@@ -106,23 +107,23 @@
         </article>
         <figure id="animals3">
             <span style="z-index: 1;">
-                <img class="ani3" src="../animais1/imagem12.png" width="500" height="350" alt="Cágado em extinção">
+                <img class="ani3" src="../animais1/imagem12.png" width="500" height="350" alt="">
             </span>
-            <img class="orc" src="../imagens_fundo/orca.png" width="816px" height="427px" alt="imagem de fundo">
+            <img class="orc" src="../imagens_fundo/orca.png" width="816px" height="427px" alt="">
         </figure>
     </section>
     <section  class="pt7">
         <h1 class="tur">Turismo</h1>
-        <p class="txt7">Existem vários passeios nas ilhas Cagarras,como psseio de lancha,barco ou jetski,experiências de mergulho vendo várias espécies de animais marinhos.Alguns sites que disponibilizam esses programas de turismo:
+        <p class="txt7">Existem vários passeios nas ilhas Cagarras,como passeios de lancha,barco ou jetski,experiências de mergulho vendo várias espécies de animais marinhos.Alguns sites que disponibilizam esses programas de turismo:
             <a class="tr" href="https://www.tripadvisor.com.br/Attraction_Review-g303506-d7148273-Reviews-Arquipelago_das_Cagarras-Rio_de_Janeiro_State_of_Rio_de_Janeiro.html" target="_blank"><span style="color: #00BCCD;">Tripadvasor</span></a>,
             <a class="rt" href="https://riotur.rio/que_fazer/ilhas-cagarras/" target="_blank"><span style="color: #00BCCD;">Rio Tour</span></a>
         </p>
         <figure id="animals4">
             <span style="z-index: 1;">
-                <img  src="../imagens/tur.png" width="500" height="350" alt="Foto turismo">
+                <img class="turi"  src="../imagens/tur.png" width="500px" height="350px" alt="">
 
             </span>
-            <img class="car" src="../imagens_fundo/car.png" width="916px" height="827px" alt="imagem de fundo">
+            <img class="car" src="../imagens_fundo/car.png" width="916px" height="827px" alt="">
         </figure>
     </section>
     <section  class="pt8">
@@ -131,28 +132,28 @@
         </p>
         <figure id="animals5"><span style="z-index: 1;">
 
-            <img src="../imagens/lixo.png" width="500" height="350" alt="Foto do lixo">
+            <img class="lix" src="../imagens/lixo.png" width="500" height="350" alt="">
         </span>
-            <img class="car" src="../imagens_fundo/car.png" width="916px" height="827px" alt="imagem de fundo">  
+            <img class="car" src="../imagens_fundo/car.png" width="916px" height="827px" alt="">  
         </figure>
     </section>
     <section id="pt9"></section>
     <section  class="lm">
         <h1 class="LM">Outros Locais de Monitoramento</h1>   
     <section class="box2">
-        <img class="ac" src="../imagens_fundo/Arraial-do-Cabo.jpeg" width="148px" height="146px" alt="Foto de Arraial">
+        <img class="ac" src="../imagens_fundo/Arraial-do-Cabo.jpeg" width="148px" height="146px" alt="">
         <h2 class="AC">Arraial do Cabo</h2>
         <p class="txtAC">Arraial do Cabo é conhecida pela rica biodiversidade marinha, com recifes de corais e diversas espécies de peixes e outros organismos marinhos...</p>
         <a href="Arraial.html"><button class="btn2"><p class="sb">Saiba mais</p></button></a>  
     </section>
     <section class="box3">
-        <img class="a" src="../imagens_fundo/Abrolhos-Bahia.jpg" width="148px" height="146px" alt="Foto de abrolhos">
+        <img class="a" src="../imagens_fundo/Abrolhos-Bahia.jpg" width="148px" height="146px" alt="">
         <h2 class="A">Abrolhos</h2>
         <p class="txtA">O arquipélago de Abrolhos ,localizado na Bahia, é um importante local de reprodução para várias espécies de aves marinhas e tartarugas marinhas...</p>
         <a href="Abrolhos.html"><button class="btn3"><p class="sb">Saiba mais</p></button></a>  
     </section>
     <section class="box4">
-        <img class="fn" src="../imagens_fundo/fn.png" width="148px" height="146px" alt="Foto Fernando de Noronha">
+        <img class="fn" src="../imagens_fundo/fn.png" width="148px" height="146px" alt="">
         <h2 class="FN">Fernando de Noronha</h2>
         <p class="txtFN">Localizado em Pernambuco,Fernando de Noronha é um arquipélogo formado por 21 ilhas que abriga exuberantes belezas naturais além de uma grande biodiversidade....</p>
         <a href="FernandoNoronha.html"><button class="btn4"><p class="sb">Saiba mais</p></button></a>  
